[gd_scene load_steps=4 format=3 uid="uid://bscn8bo3ud3s1"]

[ext_resource type="Script" path="res://Scripts/fish.gd" id="1_nxtlm"]
[ext_resource type="Texture2D" uid="uid://bi5t22r2c2k15" path="res://Resources/eye.png" id="2_oaijj"]
[ext_resource type="Texture2D" uid="uid://jf567xjhr818" path="res://Resources/fin.png" id="3_nrkqq"]

[node name="Fish" type="Node2D"]
script = ExtResource("1_nxtlm")
FollowsMouse = false
BodyColor = Color(0.0383772, 0.392568, 0.721211, 1)
PointAmount = 9
SegmentSize = Array[float]([40.0, 60.0, 60.0, 55.0, 50.0, 40.0, 30.0, 20.0, 15.0, 10.0, 2.0])

[node name="Points" type="Node" parent="."]

[node name="Anchor" type="Marker2D" parent="Points"]
position = Vector2(91, 292)

[node name="Point" type="Marker2D" parent="Points"]
position = Vector2(-383, 292)

[node name="Fins1" type="Node2D" parent="."]
position = Vector2(-200, 0)
scale = Vector2(0.065, 0.065)

[node name="Fin" type="Sprite2D" parent="Fins1"]
position = Vector2(0, -800)
rotation = 0.785397
texture = ExtResource("3_nrkqq")

[node name="Fin2" type="Sprite2D" parent="Fins1"]
position = Vector2(0, 800)
rotation = -0.785398
texture = ExtResource("3_nrkqq")

[node name="Fins2" type="Node2D" parent="."]
position = Vector2(-400, 0)
scale = Vector2(0.04, 0.04)

[node name="Fin" type="Sprite2D" parent="Fins2"]
position = Vector2(0, -800)
rotation = 0.785397
texture = ExtResource("3_nrkqq")

[node name="Fin2" type="Sprite2D" parent="Fins2"]
position = Vector2(0, 800)
rotation = -0.785398
texture = ExtResource("3_nrkqq")

[node name="TailFin" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="TailFin"]
position = Vector2(-13, 0)
color = Color(0.309804, 0.792157, 1, 1)
polygon = PackedVector2Array(13, -2, -18, -1, -40, 0, -40, 0, -18, 1, 13, 2)

[node name="Line2D" type="Line2D" parent="TailFin"]
position = Vector2(-12, 0)
points = PackedVector2Array(0, -2, -21, -1, -45, 0, -45, 0, -21, 1, 0, 2)
closed = true
width = 2.0
joint_mode = 2
round_precision = 30
antialiased = true

[node name="Shape" type="Polygon2D" parent="."]

[node name="Outline" type="Line2D" parent="."]
closed = true
width = 5.0
sharp_limit = 0.0
round_precision = 30
antialiased = true

[node name="Line" type="Line2D" parent="."]
visible = false

[node name="Eyes" type="Node2D" parent="."]
scale = Vector2(0.03, 0.03)

[node name="Eye1" type="Sprite2D" parent="Eyes"]
position = Vector2(-1066.67, -1066.67)
texture = ExtResource("2_oaijj")

[node name="Eye2" type="Sprite2D" parent="Eyes"]
position = Vector2(-1066.67, 1066.67)
texture = ExtResource("2_oaijj")

[node name="DorsalFin" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="DorsalFin"]
position = Vector2(-13, 0)
color = Color(0.309804, 0.792157, 1, 1)
polygon = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)

[node name="Line2D" type="Line2D" parent="DorsalFin"]
position = Vector2(-12, 0)
points = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0)
closed = true
width = 2.0
joint_mode = 2
round_precision = 30

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
